--- a/package.json
+++ b/package.json
@@ -24,14 +24,17 @@
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "redux-thunk": "^2.4.2",
-    "typescript": "^4.4.2",
+    "typescript": "*",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "format": "prettier --write \"src/*.{ts,tsx}\" ",
+    "lint": "eslint \"{src,apps,libs,test}/*.{ts,tsx}\" --fix",
+    "fix-code": "yarn lint && yarn format"
   },
   "eslintConfig": {
     "extends": [
@@ -50,5 +53,22 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.44.0",
+    "eslint": "8.22.0",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-airbnb": "19.0.4",
+    "eslint-config-airbnb-base": "15.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-standard-with-typescript": "^23.0.0",
+    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-jsx-a11y": "6.6.1",
+    "eslint-plugin-n": "^15.5.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "7.31.11",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "prettier": "^2.7.1"
   }
 }
