--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "task4-frontendts",
   "version": "0.1.0",
+  "homepage": "https://ToniNov.github.io/task4-frontendts",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.5",
@@ -17,6 +18,7 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "axios": "^1.1.3",
+    "gh-pages": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.39.4",
@@ -34,7 +36,9 @@
     "eject": "react-scripts eject",
     "format": "prettier --write \"src/*.{ts,tsx}\" ",
     "lint": "eslint \"{src,apps,libs,test}/*.{ts,tsx}\" --fix",
-    "fix-code": "yarn lint && yarn format"
+    "fix-code": "yarn lint && yarn format",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -57,9 +61,9 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.44.0",
     "eslint": "8.22.0",
-    "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-airbnb-base": "15.0.0",
+    "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard-with-typescript": "^23.0.0",
     "eslint-plugin-import": "2.26.0",
